# HatCat_RJ_PUB

./: QUICKSTART.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/approach/: CALIBRATION.md
docs/implementation/: HIERARCHY_BLOCKER_REMEDIATION.md  HUSH_SIGNIFICANCE_SCORING.md  INTEGRATION_COMPLETE.md  PHASE1_WEEK1_STATUS.md  POETRY_SETUP.md  STATISTICAL_ESTIMATION_FRAMEWORK.md
scripts/tools/: analyze_hierarchy_blockers.py  capture_concepts.py  validate_setup.py
src/hat/monitoring/: lens_manager.py
src/hat/steering/: hooks.py
src/hush/: hush_integration.py  prod_sig.py
src/map/meld/: bootstrap.py
src/map/statistics/: __init__.py  estimator.py
src/map/training/calibration/: cycle.py  matrix.py  validation.py
src/ui/streamlit/components/: timeline_component.py
src/ui/streamlit/timeline_viz/: package-lock.json
tests/: test_activation_capture.py
