[tool.poetry]
name = "hatcat"
version = "0.1.0"
description = "Learned semantic decoder for language models with progressive refinement"
authors = ["HatCat Contributors"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = ">=2.0.0"
transformers = ">=4.30.0"
accelerate = ">=0.20.0"
h5py = ">=3.8.0"
numpy = ">=1.24.0"
scipy = ">=1.10.0"
tqdm = ">=4.65.0"
gradio = ">=3.35.0"
pytorch-lightning = ">=2.0.0"
tensorboard = ">=2.10.0"
wandb = ">=0.15.0"
scikit-learn = ">=1.3.0"
pandas = ">=2.0.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
nltk = "^3.9.2"
sentence-transformers = "^5.1.2"
rdflib = "^7.4.0"
networkx = "3.1"
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
pydantic = ">=2.0.0"
sse-starlette = ">=1.6.0"
plotly = "^6.5.0"
streamlit = ">=1.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.group.deploy.dependencies]
modal = ">=0.73.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
